gaussian function and more edits

--- a/notes/09_som/0_noneighborhood.tex
+++ b/notes/09_som/0_noneighborhood.tex
@@ -115,7 +115,7 @@ It is a space in which we draw any insights from the data just as we try to do f
 
 \begin{center}
 	\includegraphics[width=0.9\textwidth]{img/sin_manifold_ant}
-	\captionof{figure}{To the little ant sinusoid is just a 1D line. No turns, no elevation.}
+	\captionof{figure}{To the little ant, the sinusoid is just a 1D line. No turns, no elevation.}
 \end{center}
 
 \end{frame}
