--- a/notes/09_som/1_som.tex
+++ b/notes/09_som/1_som.tex
@@ -72,8 +72,8 @@
 \pause
 
 \begin{itemize}
-\item It describes it's position in the map. It gives us access to the neighbors of this neuron in the map.
-\item This enables organizing the neurons such that the response of two neighboring neurons is more similar than that of two neurons that are far away from one another (collaboration)
+\item It describes the neuron's position in the map. It gives us access to the neighbors of this neuron in the map.
+\item This enables organizing the neurons such that the response of two neighboring neurons is more similar than that of two neurons that are far away from one another (cooperation)
 \end{itemize}
 
 \end{frame}
@@ -86,7 +86,7 @@
 
 \begin{itemize}
 \item It connects the neuron to the data.
-\item Enables the assignment of a sample $\vec x^{\alpha}$ with $\vec x \in \R^N$ and $\alpha = 1,\ldots,p$ to a neuron.\\
+\item Enables the assignment of a sample $\vec x^{(\alpha)}$ with $\vec x \in \R^N$ and $\alpha = 1,\ldots,p$ to a neuron.\\
 This is essentially clustering, but now with the possibility of a multidimensional cluster $\vec q$: \\
 \begin{equation}
 	m_{\vec{q}}^{(\alpha)} = \left\{ \begin{array}{ll}
