--- a/notes/10_lle/tutorial.tex
+++ b/notes/10_lle/tutorial.tex
@@ -14,7 +14,7 @@
 % for slides
 \subtitle{\sheetnum \tutorialtitle}
 
-%\maxdeadcycles=1000 % Workaround for ! Output loop---100 consecutive dead cycles because of too many figures
+\maxdeadcycles=1000 % Workaround for ! Output loop---100 consecutive dead cycles because of too many figures
 
 % The following use of algroithms does not work well with the notes:
 %
@@ -60,6 +60,12 @@
 \end{frame}
 
 \newpage
+
+\mode<all>
+\input{./0_dim_recap}
+\mode*
+
+\clearpage
 
 \mode<all>
 \input{./1_embedding}
