remove formatting from caption

--- a/notes/10_lle/0_dim_recap.tex
+++ b/notes/10_lle/0_dim_recap.tex
@@ -56,7 +56,7 @@ Let us examine another dataset on which we will also apply PCA\footnote{We will 
 \begin{figure}[h]
 	\centering
     \includegraphics[width=12cm]{img/s_data_pca.png}
-	\caption{PCA projection on the $\textbf{S}$ dataset. Points are colorized according to their index in the dataset.}
+	\caption{PCA projection on the ``S'' dataset. Points are colorized according to their index in the dataset.}
 	\label{fig:s_data_pca}
 \end{figure}
 
