remove math from caption

--- a/notes/10_lle/0_dim_recap.tex
+++ b/notes/10_lle/0_dim_recap.tex
@@ -13,7 +13,7 @@ provides an example of this.
      \begin{subfigure}[t]{0.4\textwidth}
          \centering
          \usebox{\imagebox}% Place largest image
-         \caption{original observations $\vec x$}
+         \caption{original observations}
          \label{fig:spiral_data}
      \end{subfigure}
      \hspace{10mm}
