--- a/notes/10_lle/0_dim_recap.tex
+++ b/notes/10_lle/0_dim_recap.tex
@@ -9,7 +9,7 @@ provides an example of this.
 
 \begin{figure}[ht]
      \centering
-     \savebox{\imagebox}{\includegraphics[width=0.4\textwidth]{img/spiral_data.png}}%
+     \savebox{\imagebox}{\includegraphics[width=0.4\textwidth]{img/spiral_data}}%
      \begin{subfigure}[t]{0.4\textwidth}
          \centering
          \usebox{\imagebox}% Place largest image
@@ -17,10 +17,10 @@ provides an example of this.
          \label{fig:spiral_data}
      \end{subfigure}
      \hspace{10mm}
-     \begin{subfigure}[t]{0.35\textwidth}
+     \begin{subfigure}[t]{0.45\textwidth}
          \centering
          \raisebox{\dimexpr.5\ht\imagebox-.5\height}{% Raise smaller image into place
-         \includegraphics[width=\textwidth]{img/spiral_pca.png}
+         \includegraphics[width=\textwidth]{img/spiral_pca}
          }
          \caption{projection onto the first 2 PCs}
          \label{fig:spiral_pca}
@@ -53,14 +53,11 @@ When determining interesting directions in the data, one will either look for ``
 Let us examine another dataset on which we will also apply PCA\footnote{We will only consider standard linear PCA.} (c.f. \figref{fig:s_data_pca}). The purpose of this is to make the distinction between global and local structure in the data and which type of structure is captured by PCA (the standard linear version of PCA):
 }
 
-\begin{figure}[h]
-	\centering
-    \includegraphics[width=12cm]{img/s_data_pca.png}
-	\caption{PCA projection on the ``S'' dataset. Points are colorized according to their index in the dataset.}
+\begin{center}
+    \includegraphics[width=12cm]{img/s_data_pca}
+	\captionof{figure}{PCA projection on the ``S'' dataset. Points are colorized according to their index in the dataset.}
 	\label{fig:s_data_pca}
-\end{figure}
-
-\end{frame}
+\end{center}
 
 \notesonly{
 Looking at the PCA projections, we recognize that they closely resemble a top-down view of the data. 
@@ -79,17 +76,9 @@ The scree plot tells us how much variance is explained by each principle compone
 - The obivous reason is that this is by design. PCA sorts the PCs in order of descending variance ($\corresponds$ eigenvalues). But this is not what we're asking. The question is specific to this \textbf{S}-data. \emph{Why does the PC that lies parallel to the y-axis explain more variance than the PC that lies parallel to the x-axis?} The reason for this is that any point on the $\textbf{S}$ gets  repeated along the y-axis. This three-dimensional $\textbf{S}$ is really a concatenation of multiple ${S}$-curves. The first PC represents which ${S}$-curve a point belongs to. The only thing left to do is to explain \emph{where} we are on a single curve. The second PC is not sufficient to fully describe this with low reconstruction error. We can only achieve a reconstruction error that is sufficiently low if we also take the third PC into account. So the first thing to point out is that PCA does not give us an ideal dimensionality reduction for this dataset. The slight tilt in $PC_2$ is that it only partially describes the $z$ coordinate of a point. We therefore expect that $PC_3$ is needed to fully recover that $z$ coordinate.
 }
 
-\begin{frame}
-\question{What is PCA doing wrong on the \textbf{S}-data?}
+\pause 
 
-\slidesonly{
-\begin{figure}[ht]
-	\centering
-    \includegraphics[width=12cm]{img/s_data_pca.png}
-	\caption{Comparing PCA projections with embedding solutions. Points are colorized according to their index in the dataset.}
-	\label{fig:s_data_pca}
-\end{figure}
-}
+\question{What is PCA doing wrong on the \textbf{S}-data?}
 
 \notesonly{
 - The points were colored according to the order in which they appear in the dataset. PCA does not account for this order. Shuffling the order of the samples leads to the exact same PCs. Nonetheless, we recognize that each group of similarly colored points share proximity to one another. To be more specific: Points with the same color lie on the same location on two different ${S}$-curves. So color represents the position on a curve and that position can only be described by the remaining two PCs. When we look at the PCA projection, we also recognize that colors overlap, specifically Blue, Green and and Red. Those three colors represent different elevation levels on the $\textbf{S}$. \emph{Is this overlap a bad thing?} They have something in common, so we want them to appear closer to one another. So let us look at what the PCA projections tell us about the color groups:
@@ -101,7 +90,6 @@ The scree plot tells us how much variance is explained by each principle compone
 \item \textcolor{red}{Red}, \textcolor{blue}{Blue} and \textcolor{green}{Green} are close to one another. Looking at $PC_2$ confirms this also. However, it does not reveal that \textcolor{red}{Red} is actually \textbf{closer} to {\color{green}{Green}}, than it is to \textcolor{blue}{Blue}.
 \end{itemize}
 }
-\end{frame}
 
 \notesonly{
 What is missing from PCA is that it doesn't prioritize that this $\textbf{S}$ is made up from multiple ${S}$-curves stacked next to each other. Knowing this information enables to find a much more compact representation for describing the data. One might actually find it completly irrelevant that the data describes resembles an $\textbf{S}$ and by doing so, one could find a more compact representation for the data. This is done by finding a representaiton that focus on preserving local structure.
@@ -109,11 +97,27 @@ What is missing from PCA is that it doesn't prioritize that this $\textbf{S}$ is
 PCA is designed to find ``global'' structure in the data. It does not restrict itself to preserving local structure. The colors show us the local structure in the data and we no longer recognize this in the PCA projections. Clustering methods base their structure on proximity measures. The proximity can be measured between a point and other data points (e.g. pairwise clustering). Clustering reveals more information about local structure than it does about global structure (i.e. the index/label assigned to a cluster is arbitrary).
 }
 
-\question{What about ICA?}\\
+\end{frame}
 
-- The independence assumption in ICA also enables it to find local structures.
+\begin{frame}
 
-This is not to make the point that linear PCA is not an effective method for dimensionality reduction. This is \textbf{not} the takeaway from all this is. The point is to know that linear PCA attends to global structure and that the user needs to decide whether they are actually interested in global or local structures. Do we care about where we are on an $S$-curve or not?
+\slidesonly{
+\begin{center}
+    \includegraphics[width=0.5\textwidth]{img/meme_worriedpca}
+\end{center}
+}
+
+We are not arguing that PCA does a bad job at dimensionality reduction. This is \textbf{not} the takeaway from all this. The point is to that linear PCA attends to global structure and that the user needs to decide whether they are actually interested in global or local structures. Do we care about where we are on an $S$-curve or not?
+
+\end{frame}
+
+
+%\question{What about ICA?}\\
+
+%- The independence assumption in ICA enables it to find \emph{local} structures.
+%Example, applying ICA to face images, yields independent sources sensitive to either the nose nose, mouth or eyes in face.
+%On the other hand PCA would find components sensitive to lighting, shape of the face, whole-face expressions (smiling vs. neutral expression) \footnote{see \href{https://scikit-learn.org/stable/auto_examples/decomposition/plot_faces_decomposition.html}{https://scikit-learn.org/stable/auto_examples/decomposition/plot_faces_decomposition.html} for a demonstration.}.
+
 
 
 \begin{frame}
@@ -125,15 +129,17 @@ This is not to make the point that linear PCA is not an effective method for dim
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=4.3cm]{img/fig3_lle_intro_cropped_pca.png}
+	\includegraphics[width=4.3cm]{img/fig3_lle_intro_cropped_pca}
 	\caption{PCA projections of translated versions of the same image}
 	\label{fig:faces_translated_pca}
 \end{figure}
 
-\question{What are the 2-d coordinates of the face if it is shifted to the bottom-left corner?}
+\pause
+
+\question{What are the PC coordinates of an image with the face shifted to the bottom-left corner?}
 
 \end{frame}
 
-
+\notesonly{
 Consider the images in \figref{fig:faces_translated_pca}. The data consists of images where a \textbf{single} picture of a face surrounded by some noisy background. Each image shows the face picture at a different location within the image. The images are projected onto the space spanned by the first two PCs. We examine the projections due to moving the face from one corner to another and find that no relation between the coordinates of the projection and the translation applied to the face picture. If we wanted to predict the coordinates of an image where the face is shifted to the bottom left corner, we wouldn't be able to make that prediction.
-
+}
