--- a/notes/10_lle/tutorial.tex
+++ b/notes/10_lle/tutorial.tex
@@ -56,9 +56,13 @@
 \end{frame}
 
 \begin{frame}
+\mode<presentation>{
+\tableofcontents[hideallsubsections]
+}
+\mode<article>{
 \tableofcontents
+}
 \end{frame}
-
 \newpage
 
 \mode<all>
