--- a/notes/11_density-est/tutorial.tex
+++ b/notes/11_density-est/tutorial.tex
@@ -67,6 +67,24 @@
 
 \clearpage
 
+\mode<all>
+\input{./2_mle}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./2_parametric}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./3_estbias}
+\mode*
+
+\clearpage
+
 %\section{References}
 %\begin{frame}[allowframebreaks] \frametitle{References}
 	%\scriptsize
