vlaidation figure and section title

--- a/notes/11_density-est/2_mle.tex
+++ b/notes/11_density-est/2_mle.tex
@@ -85,4 +85,8 @@ except that $P(\vec{x})$ is unknown.
 
 minimal $E^T$ is not as good as we think. We need to validate the likelihood on a test set.
 
+\begin{center}
+	\includegraphics[width=0.8\textwidth]{img/section1_fig3}
+\end{center}
+
 \end{frame}
