--- a/notes/11_density-est/3_estbias.tex
+++ b/notes/11_density-est/3_estbias.tex
@@ -3,7 +3,7 @@
 \mode<presentation>{
 \begin{frame} 
     \begin{center} \huge
-        \subsecname
+        \secname
     \end{center}
     \begin{center}
         How good is our estimation method?
